--- a/index.html
+++ b/index.html
@@ -8,7 +8,42 @@
 </head>
 
 <body>
-
+    <main>
+        <div>
+            <h1>Sign up</h1>
+            <footer>
+                <a href="#">Privacy policy</a>
+                <span>&amp;</span>
+                <a href="#">terms of service</a>
+            </footer>
+        </div>
+        <div>
+            <div>x</div>
+            <form>
+                <div>
+                    <label for="username">Username</label>
+                    <input id="username" type="text">
+                </div>
+                <div>
+                    <label for="email">E-mail</label>
+                    <input id="email" type="email">
+                </div>
+                <div>
+                    <label for="pass">Password</label>
+                    <input id="pass" type="password">
+                </div>
+                <div>
+                    <label for="repass">Repeat password</label>
+                    <input id="repass" type="password">
+                </div>
+                <div>
+                    <div>Get started</div>
+                    <span>or</span>
+                    <a href="#">Sign in</a>
+                </div>
+            </form>
+        </div>
+    </main>
 </body>
 
 </html>
