--- a/index.html
+++ b/index.html
@@ -22,19 +22,19 @@
             <form>
                 <div>
                     <label for="username">Username</label>
-                    <input id="username" type="text">
+                    <input id="username" type="text" placeholder="Enter your username:">
                 </div>
                 <div>
                     <label for="email">E-mail</label>
-                    <input id="email" type="email">
+                    <input id="email" type="email" placeholder="Enter your email:">
                 </div>
                 <div>
                     <label for="pass">Password</label>
-                    <input id="pass" type="password">
+                    <input id="pass" type="password" placeholder="password">
                 </div>
                 <div>
                     <label for="repass">Repeat password</label>
-                    <input id="repass" type="password">
+                    <input id="repass" type="password" placeholder="password">
                 </div>
                 <div>
                     <div>Get started</div>
