CSS file structure

--- a/index.html
+++ b/index.html
@@ -5,6 +5,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sign Up</title>
+    <!-- components -->
+    <link rel="stylesheet" href="./css/button.css">
+    <link rel="stylesheet" href="./css/form.css">
+    <!-- custom -->
+    <link rel="stylesheet" href="./css/custom.css">
 </head>
 
 <body>
@@ -12,7 +17,7 @@
         <div>
             <h1>Sign up</h1>
             <footer>
-                <a href="#">Privacy policy</a>
+                <a href=" #">Privacy policy</a>
                 <span>&amp;</span>
                 <a href="#">terms of service</a>
             </footer>
