--- a/index.html
+++ b/index.html
@@ -13,38 +13,39 @@
 </head>
 
 <body>
-    <main>
-        <div>
-            <h1>Sign up</h1>
-            <footer>
-                <a href=" #">Privacy policy</a>
+    <main class="container">
+        <div class="left-column">
+            <h1 class="page-title">
+                >Sign up</h1>
+            <footer class="bottom-links">
+                <a href=" #" class="link">Privacy policy</a>
                 <span>&amp;</span>
-                <a href="#">terms of service</a>
+                <a href="#" class="link">terms of service</a>
             </footer>
         </div>
-        <div>
-            <div>x</div>
-            <form>
-                <div>
+        <div class="right-column">
+            <div class="close">x</div>
+            <form class="form">
+                <div class="form">
                     <label for="username">Username</label>
-                    <input id="username" type="text" placeholder="Enter your username:">
+                    <input class="input" id="username" type="text" placeholder="Enter your username:">
                 </div>
-                <div>
+                <div class="form">
                     <label for="email">E-mail</label>
-                    <input id="email" type="email" placeholder="Enter your email:">
+                    <input class="input" id="email" type="email" placeholder="Enter your email:">
                 </div>
-                <div>
+                <div class="form">
                     <label for="pass">Password</label>
-                    <input id="pass" type="password" placeholder="password">
+                    <input class="input" id="pass" type="password" placeholder="password">
                 </div>
-                <div>
+                <div class="form">
                     <label for="repass">Repeat password</label>
-                    <input id="repass" type="password" placeholder="password">
+                    <input class="input" id="repass" type="password" placeholder="password">
                 </div>
-                <div>
-                    <div>Get started</div>
-                    <span>or</span>
-                    <a href="#">Sign in</a>
+                <div class="form-row">
+                    <div class="btn">Get started</div>
+                    <span class="text">or</span>
+                    <a class="link" href="#">Sign in</a>
                 </div>
             </form>
         </div>
