--- a/index.html
+++ b/index.html
@@ -16,32 +16,34 @@
 
 <body>
     <main class="container">
+
         <div class="left-column">
-            <h1 class="page-title">
-                >Sign up</h1>
+            <h1 class="page-title">Sign up</h1>
             <footer class="bottom-links">
                 <a href=" #" class="link">Privacy policy</a>
-                <span>&amp;</span>
+                <span class="text">&amp;</span>
                 <a href="#" class="link">terms of service</a>
             </footer>
         </div>
+
+
         <div class="right-column">
             <div class="close">x</div>
             <form class="form">
-                <div class="form">
-                    <label for="username">Username</label>
+                <div class="form-row">
+                    <label class="label" for="username">Username</label>
                     <input class="input" id="username" type="text" placeholder="Enter your username:">
                 </div>
-                <div class="form">
-                    <label for="email">E-mail</label>
+                <div class="form-row">
+                    <label class="label" for="email">E-mail</label>
                     <input class="input" id="email" type="email" placeholder="Enter your email:">
                 </div>
-                <div class="form">
-                    <label for="pass">Password</label>
+                <div class="form-row">
+                    <label class="label" for="pass">Password</label>
                     <input class="input" id="pass" type="password" placeholder="password">
                 </div>
-                <div class="form">
-                    <label for="repass">Repeat password</label>
+                <div class="form-row">
+                    <label class="label" for="repass">Repeat password</label>
                     <input class="input" id="repass" type="password" placeholder="password">
                 </div>
                 <div class="form-row">
