--- a/forgot-password/index.html
+++ b/forgot-password/index.html
@@ -4,14 +4,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sign Up</title>
+    <title>Sign In</title>
     <!-- reset -->
-    <link rel="stylesheet" href="./css/reset.css">
+    <link rel="stylesheet" href="../css/reset.css">
     <!-- components -->
-    <link rel="stylesheet" href="./css/button.css">
-    <link rel="stylesheet" href="./css/form.css">
+    <link rel="stylesheet" href="../css/button.css">
+    <link rel="stylesheet" href="../css/form.css">
     <!-- custom -->
-    <link rel="stylesheet" href="./css/custom.css">
+    <link rel="stylesheet" href="../css/custom.css">
 </head>
 
 <body>
@@ -19,7 +19,7 @@
     <main class="container">
 
         <div class="left-column">
-            <h1 class="page-title">Sign up</h1>
+            <h1 class="page-title">Forgot password?</h1>
             <footer class="bottom-links">
                 <a href=" #" class="link">Privacy policy</a>
                 <span class="text">&amp;</span>
@@ -31,26 +31,26 @@
         <div class="right-column">
             <div class="close">x</div>
             <form class="form">
-                <div class="form-row">
+                <!-- <div class="form-row">
                     <label class="label" for="username">Username</label>
                     <input class="input" id="username" type="text" placeholder="Enter your username:">
-                </div>
+                </div> -->
                 <div class="form-row">
                     <label class="label" for="email">E-mail</label>
                     <input class="input" id="email" type="email" placeholder="Enter your email:">
                 </div>
-                <div class="form-row">
+                <!-- <div class="form-row">
                     <label class="label" for="pass">Password</label>
                     <input class="input" id="pass" type="password" placeholder="password">
-                </div>
-                <div class="form-row">
+                </div> -->
+                <!-- <div class="form-row">
                     <label class="label" for="repass">Repeat password</label>
                     <input class="input" id="repass" type="password" placeholder="password">
-                </div>
+                </div> -->
                 <div class="form-row">
-                    <div class="btn">Get started</div>
+                    <div class="btn">Remind</div>
                     <span class="text">or</span>
-                    <a class="link" href="./login/">Sign in</a>
+                    <a class="link" href="../">Sign Up</a>
                 </div>
             </form>
         </div>
